--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <h1 class="text-3xl font-light text-center text-orange-600">Hola mundo!!</h1>
+    <p class="mt-4 text-xl italic text-center text-gray-800">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+    <div class="mt-4 text-center">
+        <a href="#" class="px-4 py-2 font-bold tracking-wider text-white uppercase bg-orange-600 rounded-xl">Entrar</a>
+    </div>
 </body>
 </html>
